--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "contentful-import": "^9.0.4",
     "date-fns": "2.30.0",
     "framer-motion": "^11.2.10",
-    "next": "latest",
+    "next": "^14.2.13",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
