--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
