--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-types": "^16.2.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/typography": "0.5.9",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
@@ -29,7 +30,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.13"
